--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -134,6 +134,7 @@
     <ClInclude Include="Stack.h" />
     <ClInclude Include="UI_Ascii.h" />
     <ClInclude Include="UI_Menu_LandingPage.h" />
+    <ClInclude Include="UI_Menu_State.h" />
     <ClInclude Include="Usuario.h" />
     <ClInclude Include="Venta.h" />
   </ItemGroup>
