mejoras en el state y minor changes

--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -78,6 +78,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalDependencies>User32.lib</AdditionalDependencies>
@@ -134,7 +136,7 @@
     <ClInclude Include="Stack.h" />
     <ClInclude Include="UI_Ascii.h" />
     <ClInclude Include="UI_Menu_LandingPage.h" />
-    <ClInclude Include="UI_Menu_State.h" />
+    <ClInclude Include="UI_MenuLanding_State.h" />
     <ClInclude Include="Usuario.h" />
     <ClInclude Include="Venta.h" />
   </ItemGroup>
