--- a/CourseraClone/CourseraClone.vcxproj.filters
+++ b/CourseraClone/CourseraClone.vcxproj.filters
@@ -31,6 +31,15 @@
     <Filter Include="Header Files\Otras bibliotecas\Algoritmos">
       <UniqueIdentifier>{cc212ff9-c667-4305-a6b1-1b9e5a2987fb}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Clases Usuarios">
+      <UniqueIdentifier>{35e1c194-4e64-4ddb-ba69-1371c8cda19a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\DashBoards">
+      <UniqueIdentifier>{eb154eea-34b0-4ae0-bcdd-f4325ccb375f}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Cursos y Actividades">
+      <UniqueIdentifier>{278cae69-13a5-4411-9432-a4cd9ff68aea}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CourseraCloneApp.cpp">
@@ -41,20 +50,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Usuario.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Estudiante.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Empresa.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="UI_Ascii.h">
       <Filter>Header Files\Menus UI</Filter>
-    </ClInclude>
-    <ClInclude Include="Actividad.h">
-      <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Boleta.h">
       <Filter>Header Files</Filter>
@@ -62,25 +59,10 @@
     <ClInclude Include="Controladora.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Curso.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Especializacion.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Inscripcion.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Venta.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Clase.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="States\DashboardEstudianteState.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="States\DashboardOrganizacionState.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Managers\GestionadorCursos.h">
@@ -121,6 +103,33 @@
     </ClInclude>
     <ClInclude Include="algoritmosOrdenamiento.h">
       <Filter>Header Files\Otras bibliotecas\Algoritmos</Filter>
+    </ClInclude>
+    <ClInclude Include="Usuario.h">
+      <Filter>Header Files\Clases Usuarios</Filter>
+    </ClInclude>
+    <ClInclude Include="Empresa.h">
+      <Filter>Header Files\Clases Usuarios</Filter>
+    </ClInclude>
+    <ClInclude Include="Estudiante.h">
+      <Filter>Header Files\Clases Usuarios</Filter>
+    </ClInclude>
+    <ClInclude Include="States\DashboardEstudianteState.h">
+      <Filter>Header Files\DashBoards</Filter>
+    </ClInclude>
+    <ClInclude Include="States\DashboardOrganizacionState.h">
+      <Filter>Header Files\DashBoards</Filter>
+    </ClInclude>
+    <ClInclude Include="Clase.h">
+      <Filter>Header Files\Cursos y Actividades</Filter>
+    </ClInclude>
+    <ClInclude Include="Actividad.h">
+      <Filter>Header Files\Cursos y Actividades</Filter>
+    </ClInclude>
+    <ClInclude Include="Curso.h">
+      <Filter>Header Files\Cursos y Actividades</Filter>
+    </ClInclude>
+    <ClInclude Include="Especializacion.h">
+      <Filter>Header Files\Cursos y Actividades</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
