--- a/CourseraClone/CourseraClone.vcxproj.filters
+++ b/CourseraClone/CourseraClone.vcxproj.filters
@@ -131,5 +131,11 @@
     <ClInclude Include="Especializacion.h">
       <Filter>Header Files\Cursos y Actividades</Filter>
     </ClInclude>
+    <ClInclude Include="States\CrearCursoState.h">
+      <Filter>Header Files\States</Filter>
+    </ClInclude>
+    <ClInclude Include="States\CrearEspecializacionState.h">
+      <Filter>Header Files\States</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
