--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -132,15 +132,15 @@
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Managers\GestionadorCursos.h" />
     <ClInclude Include="Managers\GestionadorUsuarios.h" />
-    <ClInclude Include="MenuState.h" />
+    <ClInclude Include="Menu_State.h" />
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="PriorityQueue.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Stack.h" />
-    <ClInclude Include="States\CrearCursoState.h" />
-    <ClInclude Include="States\CrearEspecializacionState.h" />
-    <ClInclude Include="States\DashboardEstudianteState.h" />
-    <ClInclude Include="States\DashboardOrganizacionState.h" />
+    <ClInclude Include="States\CrearCurso_State.h" />
+    <ClInclude Include="States\CrearEspecializacion_State.h" />
+    <ClInclude Include="States\DashboardEstudiante_State.h" />
+    <ClInclude Include="States\DashboardOrganizacion_State.h" />
     <ClInclude Include="UI_Ascii.h" />
     <ClInclude Include="OLD_LandingPage.h" />
     <ClInclude Include="LandingPage_State.h" />
