HOY NOS VOVLIMOS A ILUSIONARRR!

--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -113,6 +113,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Controladora.cpp" />
     <ClCompile Include="CourseraCloneApp.cpp" />
     <ClCompile Include="Login_State.h" />
   </ItemGroup>
