--- a/CourseraClone/CourseraClone.vcxproj.filters
+++ b/CourseraClone/CourseraClone.vcxproj.filters
@@ -104,5 +104,8 @@
     <ClInclude Include="DashboardEstudiante.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="PantallaResultado.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
