--- a/CourseraClone/CourseraClone.vcxproj.filters
+++ b/CourseraClone/CourseraClone.vcxproj.filters
@@ -13,6 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Pantallas">
+      <UniqueIdentifier>{22a8ee01-76de-4529-a72b-d6b867534658}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Bibliotecas">
+      <UniqueIdentifier>{9f170786-553b-44c3-97f8-82ffba8939f1}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Gestores">
+      <UniqueIdentifier>{2d93baa3-70fe-425d-8cf0-1dd436041b51}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Negocio">
+      <UniqueIdentifier>{7e18c11e-3a0a-417c-95c8-cb72e9efab0d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Estructuras">
+      <UniqueIdentifier>{c15c9ef9-2275-4bec-ab19-482ad49cc9af}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="CourseraCloneApp.cpp">
@@ -20,92 +35,92 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Boleta.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="Controladora.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Inscripcion.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Venta.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Empresa.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Estudiante.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Usuario.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Actividad.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Clase.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Curso.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Especializacion.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="UI_Ascii.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="ExtendedFunctions.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="LinkedList.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Nodo.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="PriorityQueue.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Queue.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Stack.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="algoritmosBusqueda.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="algoritmosOrdenamiento.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GestionadorUsuarios.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="GestionadorCursos.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Utils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Pantalla.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="DashboardEstudiante.h">
+      <Filter>Header Files\Pantallas</Filter>
     </ClInclude>
     <ClInclude Include="LandingPage.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Pantallas</Filter>
     </ClInclude>
-    <ClInclude Include="Registro.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Login.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="DashboardEstudiante.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Pantalla.h">
+      <Filter>Header Files\Pantallas</Filter>
     </ClInclude>
     <ClInclude Include="PantallaResultado.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Pantallas</Filter>
+    </ClInclude>
+    <ClInclude Include="Registro.h">
+      <Filter>Header Files\Pantallas</Filter>
+    </ClInclude>
+    <ClInclude Include="Login.h">
+      <Filter>Header Files\Pantallas</Filter>
+    </ClInclude>
+    <ClInclude Include="UI_Ascii.h">
+      <Filter>Header Files\Pantallas</Filter>
+    </ClInclude>
+    <ClInclude Include="algoritmosBusqueda.h">
+      <Filter>Header Files\Bibliotecas</Filter>
+    </ClInclude>
+    <ClInclude Include="algoritmosOrdenamiento.h">
+      <Filter>Header Files\Bibliotecas</Filter>
+    </ClInclude>
+    <ClInclude Include="ExtendedFunctions.h">
+      <Filter>Header Files\Bibliotecas</Filter>
+    </ClInclude>
+    <ClInclude Include="GestionadorUsuarios.h">
+      <Filter>Header Files\Gestores</Filter>
+    </ClInclude>
+    <ClInclude Include="GestionadorCursos.h">
+      <Filter>Header Files\Gestores</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files\Bibliotecas</Filter>
+    </ClInclude>
+    <ClInclude Include="Boleta.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Actividad.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Clase.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Curso.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Especializacion.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Empresa.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Estudiante.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Inscripcion.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Venta.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="Usuario.h">
+      <Filter>Header Files\Negocio</Filter>
+    </ClInclude>
+    <ClInclude Include="LinkedList.h">
+      <Filter>Header Files\Estructuras</Filter>
+    </ClInclude>
+    <ClInclude Include="Nodo.h">
+      <Filter>Header Files\Estructuras</Filter>
+    </ClInclude>
+    <ClInclude Include="PriorityQueue.h">
+      <Filter>Header Files\Estructuras</Filter>
+    </ClInclude>
+    <ClInclude Include="Queue.h">
+      <Filter>Header Files\Estructuras</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack.h">
+      <Filter>Header Files\Estructuras</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
