--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -124,6 +124,7 @@
     <ClInclude Include="Controladora.h" />
     <ClInclude Include="Curso.h" />
     <ClInclude Include="DashboardEstudiante.h" />
+    <ClInclude Include="DashboardOrganizacion.h" />
     <ClInclude Include="Empresa.h" />
     <ClInclude Include="Especializacion.h" />
     <ClInclude Include="Estudiante.h" />
