UserProfile screen included. No interaction yet. TODO: backend plz add data here

--- a/CourseraClone/CourseraClone.vcxproj.filters
+++ b/CourseraClone/CourseraClone.vcxproj.filters
@@ -122,5 +122,8 @@
     <ClInclude Include="DashboardOrganizacion.h">
       <Filter>Header Files\Pantallas</Filter>
     </ClInclude>
+    <ClInclude Include="PerfilEstudiante.h">
+      <Filter>Header Files\Pantallas</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
