--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="Pantalla.h" />
     <ClInclude Include="PantallaResultado.h" />
+    <ClInclude Include="PerfilEstudiante.h" />
     <ClInclude Include="PriorityQueue.h" />
     <ClInclude Include="Queue.h" />
     <ClInclude Include="Registro.h" />
