--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -125,6 +125,7 @@
     <ClInclude Include="Curso.h" />
     <ClInclude Include="DashboardEstudiante.h" />
     <ClInclude Include="DashboardOrganizacion.h" />
+    <ClInclude Include="EditarPerfil.h" />
     <ClInclude Include="Empresa.h" />
     <ClInclude Include="Especializacion.h" />
     <ClInclude Include="Estudiante.h" />
