--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -135,6 +135,7 @@
     <ClInclude Include="LandingPage.h" />
     <ClInclude Include="LinkedList.h" />
     <ClInclude Include="Login.h" />
+    <ClInclude Include="MostrarCurso.h" />
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="Pantalla.h" />
     <ClInclude Include="PantallaResultado.h" />
