--- a/CourseraClone/CourseraClone.vcxproj.filters
+++ b/CourseraClone/CourseraClone.vcxproj.filters
@@ -137,5 +137,11 @@
     <ClInclude Include="MostrarEspecialidad.h">
       <Filter>Header Files\Pantallas</Filter>
     </ClInclude>
+    <ClInclude Include="InscripcionCurso.h">
+      <Filter>Header Files\Pantallas</Filter>
+    </ClInclude>
+    <ClInclude Include="InscripcionEspecialidad.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
