--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -152,6 +152,7 @@
     <ClInclude Include="Usuario.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Venta.h" />
+    <ClInclude Include="VerBboletas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
