--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -158,6 +158,10 @@
     <ClInclude Include="Venta.h" />
     <ClInclude Include="VerBboletas.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\Plan de implementacion.md" />
+    <None Include="..\README.md" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
