NetworkManagerServer implementacion inicial

--- a/CourseraClone/CourseraClone.vcxproj
+++ b/CourseraClone/CourseraClone.vcxproj
@@ -143,6 +143,7 @@
     <ClInclude Include="Login.h" />
     <ClInclude Include="MostrarCurso.h" />
     <ClInclude Include="MostrarEspecialidad.h" />
+    <ClInclude Include="NetworkManagerServer.h" />
     <ClInclude Include="Nodo.h" />
     <ClInclude Include="Pantalla.h" />
     <ClInclude Include="PantallaResultado.h" />
